updated for the migration to the 'cbench' project space on Sourceforge
plus new versions of software required to instantiate
TRAC on Sourceforge

--- a/trac/sf/index.html
+++ b/trac/sf/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <html>
   <head>
-    <meta http-equiv="refresh" content="0;URL=http://cbench-sf.sourceforge.net/cgi-bin/trac.cgi">
+    <meta http-equiv="refresh" content="0;URL=http://cbench.sourceforge.net/cgi-bin/trac.cgi">
   </head>
 
   <body bgcolor="#FFFFFF" text="#000000">
-    Click <a href="http://cbench-sf.sourceforge.net/cgi-bin/trac.cgi">here</a> to get to the FrontPage.
+    Click <a href="http://cbench.sourceforge.net/cgi-bin/trac.cgi">here</a> to get to the FrontPage.
   </body>
 </html>
